plugins {
    id 'java-library'
    id 'me.champeau.jmh' version '0.7.2'
    id "com.vanniktech.maven.publish" version "0.36.0"
}

group = 'sh.fyz'
version = '2.2.0'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['-parameters']
}

tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
    options.addStringOption('Xdoclint:none', '-quiet')
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    compileOnly 'sh.fyz:Architect:2.1.0'

    implementation 'org.postgresql:postgresql:42.7.8'
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    api 'org.eclipse.jetty:jetty-server:11.0.26'
    api 'org.eclipse.jetty:jetty-servlet:11.0.26'
    api 'jakarta.servlet:jakarta.servlet-api:5.0.0'
    api 'io.jsonwebtoken:jjwt:0.13.0'
    api 'com.fasterxml.jackson.core:jackson-databind:2.19.0'
    api 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.19.0'
    api 'com.github.ben-manes.caffeine:caffeine:3.2.3'

    implementation 'jakarta.mail:jakarta.mail-api:2.1.5'
    implementation 'org.eclipse.angus:jakarta.mail:2.0.5'
    implementation 'org.jsoup:jsoup:1.21.2'
    implementation 'at.favre.lib:bcrypt:0.10.2'
    implementation 'io.github.classgraph:classgraph:4.8.184'

    api 'org.slf4j:slf4j-api:2.0.13'

    testImplementation 'sh.fyz:Architect:2.1.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.4'
    testImplementation 'org.awaitility:awaitility:4.2.2'
    testImplementation 'com.icegreen:greenmail:2.1.3'
    testImplementation 'org.mockito:mockito-core:5.14.2'
    testRuntimeOnly 'org.slf4j:slf4j-simple:2.0.13'
}

mavenPublishing {
    publishToMavenCentral()

    pom {
        name = 'Fiber'
        description = 'A modern Java 21+ framework for building RESTful APIs on top of Jetty. Built-in JWT authentication, OAuth2, CORS, CSRF, rate limiting, sessions, validation, file uploads, and audit logging.'
        url = 'https://fyz.sh'
        licenses {
            license {
                name = 'MIT License'
                url = 'https://opensource.org/licenses/MIT'
            }
        }
        developers {
            developer {
                id = "fyz"
                name = "Thibeau Benet"
                url = "https://github.com/w8fyz"
            }
        }
        scm {
            url = "https://github.com/w8fyz/Fiber"
            connection = "scm:git:git://github.com/w8fyz/Fiber.git"
            developerConnection = "scm:git:ssh://git@github.com/w8fyz/Fiber.git"
        }
    }

    signAllPublications()
}

signing {
    useGpgCmd()
}

test {
    useJUnitPlatform()
    testLogging {
        events 'passed', 'skipped', 'failed'
        showStandardStreams = true
    }
}

jmh {
    warmupIterations = 3
    iterations = 5
    fork = 1
    benchmarkMode = ['thrpt']
}
